WebCore/html/HTML5TreeBuilder.h
@@ -59,7 +59,7 @@ public:
     // Done, close any open tags, etc.
     void finished();
 
-    static HTML5Lexer::State adjustedLexerState(HTML5Lexer::State, const AtomicString& tagName);
+    static HTML5Lexer::State adjustedLexerState(HTML5Lexer::State, const AtomicString& tagName, Frame*);
 
     // FIXME: This is a dirty, rotten hack to keep HTMLFormControlElement happy
     // until we stop using the legacy parser. DO NOT CALL THIS METHOD.
@@ -82,6 +82,8 @@ private:
 
     void setInsertionMode(InsertionMode value) { m_insertionMode = value; }
     InsertionMode insertionMode() const { return m_insertionMode; }
+
+    static bool isScriptingFlagEnabled(Frame* frame);
 
     Document* m_document; // This is only used by the m_legacyParser for now.
     bool m_reportErrors;
